dbos_server_service/auth_service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
